--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: Bruenle Lab Homepage
+title: Brünle Lab Homepage
 
 # Your name to show in the footer
-author: Some Person
+author: Steffen Brünle
 
 ###############################################
 # --- List of links in the navigation bar --- #
